--- a/package.json
+++ b/package.json
@@ -4,9 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc --build",
+    "test": "nyc --reporter lcov npm run mocha",
+    "mocha": "cross-env TS_NODE_FILES=true mocha --exit --check-leaks --throw-deprecation --trace-warnings --require ts-node/register './src/**/*.test.ts'",
+    "mocha-watch": "cross-env TS_NODE_FILES=true mocha  --exit --check-leaks --throw-deprecation --trace-warnings --require ts-node/register './src/**/*.test.ts' --watch --watch-files src/**/*,test/**/*"
+
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/mocha": "^10.0.1",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@ethereumjs/vm": "^6.3.0"
+  }
 }
