--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "@ethereumjs/blockchain": "^6.2.1",
     "@ethereumjs/vm": "^6.3.0",
-    "level": "^8.0.0"
+    "level": "^8.0.0",
+    "levelup": "^5.1.1",
+    "memdown": "^6.1.1",
+    "memory-level": "^1.0.0"
   }
 }
