--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "dependencies": {
     "@ethereumjs/blockchain": "^6.2.1",
     "@ethereumjs/vm": "^6.3.0",
+    "bunyan": "^1.8.15",
+    "bunyan-format": "^0.2.1",
     "debug": "^4.3.4",
     "level": "^8.0.0",
     "levelup": "^5.1.1",
     "memdown": "^6.1.1",
-    "memory-level": "^1.0.0"
+    "memory-level": "^1.0.0",
+    "winston": "^3.8.2"
   }
 }
